finished the users enitiy
